--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 sudo: enabled
 install:
   - sudo apt-get update
+  # Install Conda
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
@@ -12,10 +13,16 @@ install:
   - conda update -q conda
   # Useful for debugging any issues with conda
   - conda info -a
-
-  # Replace dep1 dep2 ... with your dependencies
+  # Install dependencies
   - conda create -q -c rdkit -n test-environment python=$TRAVIS_PYTHON_VERSION rdkit
   - source activate test-environment
-  - python setup.py install
+  - pip install coveralls
+  - pip install coverage
 script:
-  - python setup.py test
+  # Install prolif
+  - python setup.py install
+  # Run tests with coverage
+  - coverage run setup.py test
+after_success:
+  # Create report for coveralls
+  - coveralls
