Moved tests, changed travis script, changed setup for setuptools

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,14 @@ install:
   - source activate test-environment
   - pip install coveralls
   - pip install coverage
-script:
   # Install prolif
-  - python setup.py install
+  - pip install -e .
+script:
+  - prolif --help
+  - prolif --version
+  - prolif --log INFO --protein examples/protein.mol2 --reference examples/ligand.mol2 --ligand examples/ligand.mol2
+after_success:
   # Run tests with coverage
   - coverage run setup.py test
-after_success:
   # Create report for coveralls
   - coveralls
